fix: css alignment

--- a/docs/source/assets/styles/components/_breadcrumbs.sass
+++ b/docs/source/assets/styles/components/_breadcrumbs.sass
@@ -10,16 +10,11 @@ ul.bd-breadcrumbs
       font-size: 14px
       padding: 0
       margin: 0
-      width: min-content
       text-underline-offset: 4px
 
     &:not(.breadcrumb-home):before
       font-size: 10px
       color: #00000099
-
-.breadcrumb-home
-  width: 27.75px
-
 
 @media (min-width: 1200px)
   ul.bd-breadcrumbs
