--- a/docs/source/assets/styles/components/_links.sass
+++ b/docs/source/assets/styles/components/_links.sass
@@ -23,6 +23,7 @@ h1 > a.headerlink::before, h2 > a.headerlink::before
 
 // Social links styling
 .social-links
+  margin-top: 1.5rem
   margin-bottom: 1.5rem
 
   #social-links-table
@@ -54,6 +55,7 @@ h1 > a.headerlink::before, h2 > a.headerlink::before
             border-radius: 12px
             color: var(--pst-color-link)
             font-weight: 500
+            font-size: 14px
             transition: all 0.3s ease
             text-decoration: none
             width: 100%
@@ -88,6 +90,7 @@ h1 > a.headerlink::before, h2 > a.headerlink::before
 
 // Notebook links
 .fo-notebook-links
+  margin-top: 1.5rem
   margin-bottom: 1.5rem
   width: 100%
   display: flex
@@ -118,6 +121,7 @@ h1 > a.headerlink::before, h2 > a.headerlink::before
           border-radius: 12px
           color: var(--pst-color-link)
           font-weight: 500
+          font-size: 14px
           transition: all 0.3s ease
           text-decoration: none
           width: 100%
