--- a/docs/source/assets/styles/components/_search.sass
+++ b/docs/source/assets/styles/components/_search.sass
@@ -8,7 +8,7 @@
   width: 100%
   padding: 3px 4px
 
-  @media (min-width: 960px)
+  @media (min-width: 1200px)
     min-width: 180px
 
     &:hover, &:active, &:focus
