--- a/docs/source/assets/styles/layout/_main.sass
+++ b/docs/source/assets/styles/layout/_main.sass
@@ -76,6 +76,10 @@ main
   .bd-page-width
     max-width: 82.5rem
 
+@media (min-width: 1200px)
+  .bd-main .bd-content .bd-article-container .bd-article
+    padding-top: 0
+
 @media (min-width: 1500px)
   .bd-header__inner.bd-page-width,
   .bd-container__inner.bd-page-width
